--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,2 +1,17 @@
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark, cupcake;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  justify-items: center;
+  gap: 20px;
+}
+
+@media (min-width: 576px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
